tcg-salesforce/force-app/main/default/objects/Card__c/fields/Attack__c.field-meta.xml
<CustomField>
    <fullName>Attack__c</fullName>
    <inlineHelpText>Field to fill the monster attack value</inlineHelpText>
    <label>Attack</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>