tcg-salesforce/force-app/main/default/objects/Card__c/fields/EnergyCost__c.field-meta.xml
<CustomField>
    <fullName>EnergyCost__c</fullName>
    <label>Energy cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>