tcg-salesforce/force-app/main/default/objects/Card__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <inlineHelpText>Card image URL</inlineHelpText>
    <label>Image</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>