tcg-salesforce/force-app/main/default/objects/Card__c/fields/Rarity__c.field-meta.xml
<CustomField>
    <fullName>Rarity__c</fullName>
    <label>Rarity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Common</fullName>
            </value>
            <value>
                <fullName>Uncommon</fullName>
            </value>
            <value>
                <fullName>Rare</fullName>
            </value>
            <value>
                <fullName>Ultra Rare</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>