tcg-salesforce/force-app/main/default/objects/Card__c/fields/RarityColor__c.field-meta.xml
<CustomField>
    <fullName>RarityColor__c</fullName>
    <formula>IF(
    TEXT(Rarity__c) = &apos;Uncommon&apos;,
    &apos;#3801067d&apos;,
    IF(
        TEXT(Rarity__c) = &apos;Rare&apos;,
        &apos;#70267182&apos;,
        IF(
            TEXT(Rarity__c) = &apos;Ultra Rare&apos;,
            &apos;#0103387d&apos;,
            IF(
                TEXT(Rarity__c) = &apos;Special&apos;,
                &apos;#03e8ff7a&apos;,
                &apos;#26714A&apos;    
            )   
        )
    )
)</formula>
    <label>Rarity color</label>
    <type>Text</type>
</CustomField>