tcg-salesforce/force-app/main/default/objects/Card__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Monster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>