tcg-salesforce/force-app/main/default/objects/Card__c/listViews/AllWithFields.listView-meta.xml
<ListView>
    <fullName>AllWithFields</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Attack__c</columns>
    <columns>Defense__c</columns>
    <columns>EnergyCost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Monster</value>
    </filters>
    <label>All (With fields)</label>
</ListView>